here all the task controller and assign controller method changed according to role bassed
